# quant-portfolio-opt

./: README.md  api_usage_example.py  docker-compose.yaml  pyproject.toml  tickers.csv
flask_api/: .gitignore  Dockerfile  README.md  flask_base.env  pyproject.toml
flask_api/conf/: io.yml
flask_api/conf/endpoints/: available_tickers.yml  health.yml  optimization_results.yml  portfolio_optimize.yml
flask_api/src/: app.py  test_api_call.py  test_optimization_results_call.py  test_portfolio_optimizer_call.py
flask_api/src/resources/: __init__.py  available_tickers.py  health.py  optimization_results.py  portfolio_opt.py  portfolio_optimizer.py  teste.py
flask_api/src/utils/: __init__.py  commons.py  input_output.py
po201_ampl_model/: .gitignore  Dockerfile  pyproject.toml  run.sh
po201_ampl_model/src/: build_final_values.py  final_project.py  markowitz.mod  projeto_final.mod
po201_ampl_model/src/teste_dummy/: markowitz_example.mod  teste_dummy.py
po201_ampl_model/src/utils/: __init__.py  helper.py  input_output.py  parser.py
po201_ampl_model/src/young_minmax/: teste.py  young_minmax.mod  young_minmax.py
po201_etl/: pyproject.toml
po201_etl/conf/: dummy.yml
po201_etl/conf/yahoo_finance/: io.yml
po201_etl/src/: airflow.cfg
po201_etl/src/dags/: dummy_spark_dag.py  yahoo_finance_dag.py
po201_etl/src/data_domains/dummy/: __init__.py
po201_etl/src/data_domains/dummy/primary/: __init__.py  dummy_prm.py
po201_etl/src/data_domains/dummy/raw/: __init__.py  get_data.py
po201_etl/src/data_domains/yahoo_finance/: __init__.py
po201_etl/src/data_domains/yahoo_finance/primary/: __init__.py  yahoo_finance_prm.py
po201_etl/src/data_domains/yahoo_finance/raw/: __init__.py  stock_names_raw.py  yahoo_finance_raw.py
po201_etl/src/utils/: __init__.py  commons.py  input_output.py  io.py  tickers.py
po201_kedro_model/: .coveragerc  Dockerfile  README.md  kedro_base.env  pyproject.toml
po201_kedro_model/conf/base/: globals.yml
po201_kedro_model/conf/base/catalog/: model_inputs.yml  model_outputs.yml
po201_kedro_model/conf/base/catalog/yahoo_finance/: features.yml  primary.yml
po201_kedro_model/conf/base/parameters/: model_inputs.yml  yahoo_finance.yml
po201_kedro_model/docs/source/: conf.py
po201_kedro_model/src/: setup.py
po201_kedro_model/src/po201_kedro_model/: __init__.py  hooks.py  settings.py
po201_kedro_model/src/po201_kedro_model/data_domains/yahoo_finance/: __init__.py
po201_kedro_model/src/po201_kedro_model/data_domains/yahoo_finance/features/: __init__.py  yahoo_finance_fte.py
po201_kedro_model/src/po201_kedro_model/data_domains/yahoo_finance/primary/: __init__.py  (+1 more)
po201_kedro_model/src/po201_kedro_model/io/: __init__.py  custom_sql_query.py
po201_kedro_model/src/po201_kedro_model/models/: __init__.py  genetic_algorithm.py
po201_kedro_model/src/po201_kedro_model/pipelines/: data_science.py
po201_kedro_model/src/tests/: test_run.py
portfolio_opt/: README.md  pyproject.toml
portfolio_opt/docs/source/: conf.py  index.rst
portfolio_opt/src/: setup.py
portfolio_opt/src/portfolio_opt/: __init__.py  settings.py
portfolio_opt/src/tests/: test_run.py
(+68 files in other folders)
