[tool.poetry]
name = "portfolio_opt_api"
version = "0.1.0"
description = ""
authors = ["Guilherme Palazzo <palazzoeng1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"

# GENERAL MAJOR DEPS
Flask = "1.1.2"
Flask-RESTful = "0.3.8"
waitress = "1.4.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
