[tool.poetry]
name = "po201_portfolio_opt_ampl"
version = "0.1.0"
description = ""
authors = ["Guilherme Palazzo <palazzoeng1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"

# GENERAL MAJOR DEPS
amplpy = "^0.7.1"
psycopg2-binary = "^2.9.2"
pandas = "1.1.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
