[tool.poetry]
name = "po201_portfolio-opt"
version = "0.1.0"
description = ""
authors = ["Guilherme Palazzo <palazzoeng1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"

# GENERAL MAJOR DEPS
apache-airflow = "2.1.2"
pandera = "^0.7.0"
simpleeval = "0.9.11"
yfinance = "^0.1.64"
yahoo-fin = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
