[tool.kedro]
package_name = "po201_kedro_model"
project_name = "po201_kedro_model"
project_version = "0.17.0"

[tool.poetry]
name = "po201_portfolio_opt_model"
version = "0.1.0"
description = ""
authors = ["Guilherme Palazzo <palazzoeng1@gmail.com>"]

[tool.pycln]
path = "src/"
exclude = "(.*init.*py$)"
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
    | profiling
)/
'''

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/po201_kedro_model -ra"""

[tool.poetry.dependencies]
python = "3.7.*"

# GENERAL MAJOR DEPS
pandas = "1.1.5"
kedro = {extras = ["pandas"], version = "0.17.0"}
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
jupyterlab = "^3.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
